17-linkerd/linkerd-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: linkerd-dashboard
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/upstream-vhost: linkerd-web.linkerd.svc.cluster.local:8084
  namespace: linkerd
spec:
  tls:
    - hosts:
        - linkerd-dashboard.workshop.metakube.org
  rules:
    - host: linkerd-dashboard.workshop.metakube.org
      http:
        paths:
          - path: /
            backend:
              serviceName: linkerd-web
              servicePort: 8084
